# cs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  terminology.txt
apps/: CMakeLists.txt  eigen_test.cpp  points.cpp  rapidjson_test.cpp  rapidjson_test2.cpp  read_ppm.cpp  remove_perspective_distortion.cpp  test.py
apps/bill/: index.html  script.js
apps/cheatsheets/: cpp.md  readme.md
apps/cse160/: app.js
apps/cse160/asg0/: asg0.html  asg0.js
apps/cse160/asg1/: asg1.html  asg1.js
apps/cse160/asg1/lib/: shaders.js
apps/cse160/asg2/: asg2.html
apps/cse160/asg2/minecraft/: asg2.html  asg2.js
apps/expert/: readme.md
apps/flower_classification/: classification.py  dataset.py  image_classification.ipynb  image_dataset.py  inference.ipynb  readme.md
apps/live-stream/: live_stream.mm
apps/polygons/: info.md  readme.md  triangulate.cpp  triangulation.cpp
apps/probstat/: index.html
apps/splat/: index.html  main.js
assets/: plot.py
assets/results/: santa_cruz_beach_undistorted.ppm  santa_cruz_park_hours_undistorted.ppm  santa_cruz_stop_sign_undistorted.ppm
assets/samples/: convert.py  convert_tojpg.py  santa_cruz_beach.json  santa_cruz_beach_small.ppm  santa_cruz_park_hours.json  santa_cruz_park_hours.ppm  santa_cruz_stop_sign copy.json  santa_cruz_stop_sign.json  santa_cruz_stop_sign.ppm
assets/santa_cruz_flora/: images.csv
include/: geometry_base.hpp  image_io.hpp  json_support.hpp
src/: geometry_base.cpp  image_io.cpp  image_io.hpp  json_support.cpp  read_ppm.cpp  test.sh
ucsc/cse160/: app.js  index.html
ucsc/cse160/asg0/: bib.md  index.html
ucsc/cse160/asg0/lib/: cuon-matrix-cse160.js
ucsc/cse160/asg1/: asg1.js  index.html
ucsc/cse160/asg1/lib/: cuon-matrix-cse160.js  cuon-utils.js  custom-utils.js  dinosaur.js  game.js  global.js  point.js  renderer.js  triangle.js
ucsc/cse160/asg2/: Assignment 1.html  asg2.js  bib.md  index.html
ucsc/cse160/asg2/lib/: custom-utils.js  cylinder.js  global.js  renderer.js  triangle.js
ucsc/cse160/asg3/: asg2.js  bib.md  index.html  readmd.md  script.js
ucsc/cse160/asg3/lib/: camera.js  cube.js  cuon-matrix-cse160.js  custom-utils.js  global.js  renderer.js  shaders.js
ucsc/cse160/asg4/: asg4.js  index.html  readmd.md
ucsc/cse160/asg4/lib/: camera.js  custom-utils.js  global.js  renderer.js  shaders.js  sphere.js
ucsc/cse160/asg5/: package.json
ucsc/cse160/asg5/public/: index.html  minecraft-small-house.mtl  script.js
ucsc/cse160/asg5/public/assets/: minecraft-small-house.mtl
ucsc/cse160/asg5/server/: server.js
ucsc/cse160/lib/: cube.js  custom-utils.js  dinosaur.js  renderer.js  shaders.js
ucsc/cse160/scripts/: hw2.py  linear_interpolation.html  test.html
ucsc/seal/: convergence.py  readme.md  requirements.txt
(+5 files in other folders)
